--- a/sirius.html
+++ b/sirius.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#0c0d12">
+  <meta name="google-site-verification" content="20u6fl00tYLD_xa9bLc1OuqdaY3ymcqsNdHIywDEmyk" />
   <meta name="description" content="Sirius FTC #33422 - Robotics team competing in FIRST Tech Challenge. We design, build, and program competition-ready robots.">
   <title>Sirius FTC</title>
   <link rel="stylesheet" href="sirius.css" />
