Update achievement titles with additional details

--- a/sirius.html
+++ b/sirius.html
@@ -63,7 +63,7 @@
         
         <div class="achievement-item">
           <div class="achievement-text">
-            <h3>Almaty First Regional</h3>
+            <h3>Almaty First Regional - Sustain Award Winner</h3>
             <p>Our team participated in the regional championship, demonstrating our robot's capabilities in competitive matches.</p>
           </div>
           <div class="achievement-image">
@@ -73,7 +73,7 @@
 
         <div class="achievement-item">
           <div class="achievement-text">
-            <h3>Daryn FIRST Qualifier 2026</h3>
+            <h3>Daryn FIRST Qualifier 2026 - Control Award 3rd Place</h3>
             <p>Our team took part in the Daryn FIRST Qualifier 2026 regional championship, showcasing our robot’s capabilities in competitive matches.</p>
           </div>
           <div class="achievement-image">
@@ -83,7 +83,7 @@
 
         <div class="achievement-item">
           <div class="achievement-text">
-            <h3>Scrimmage in HTA</h3>
+            <h3>Scrimmage in HTA - First Place </h3>
             <p>Practice competition at HTA where we tested our robot's performance and made crucial improvements.</p>
           </div>
           <div class="achievement-image">
